applications/openlookeng-api-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-api
  name: openlookeng-api
