applications/openlookeng-api-ingress/mailman-api-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: openlookeng-mailman-internal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 30001
---
kind: Endpoints
apiVersion: v1
metadata:
  name: openlookeng-mailman-internal
subsets:
  - addresses:
      # These machines below are cluster workers in openlookeng cluster.
      - ip: 10.0.0.109
      - ip: 10.0.0.191
    ports:
      - port: 30001
