applications/openlookeng-api-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: openlookeng-api-ingress
spec:
  tls:
    - hosts:
        - api.openlookeng.io
      secretName: api-tls
  rules:
    - host: api.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: openlookeng-mailman-internal
              servicePort: 80
            path: /mailman(/|$)(.*)
